Fix for text overflow in code block when using extra large text mode

--- a/styles.css
+++ b/styles.css
@@ -700,7 +700,7 @@ code {
 /* FOOTER END*/
 
 /* RESPONSIVENESS START */
-@media screen and (min-width: 580px) {
+@media screen and (min-width: 55ch) {
     .hero h1{
         flex-direction: row;
     }
@@ -713,6 +713,7 @@ code {
 
     .phpcode code {
         white-space: pre-wrap;
+        word-wrap: break-word;
     }
 }
 
